完成visitor接口、实现密码加密
