# api/v1/visitorApi.go
@@ -5,6 +5,7 @@ import (
 	. "MarvelousBlog-Backend/config"
 	"MarvelousBlog-Backend/entity"
 	"MarvelousBlog-Backend/entity/model"
+	"MarvelousBlog-Backend/utils"
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"strconv"
@@ -24,6 +25,8 @@ func CreateVisitor(c *gin.Context) {
 	var data model.Visitor
 	if err := c.ShouldBind(&data); err != nil {
 		Log.Errorf(common.SYSTEM_ERROR_LOG, "Json bind error!", err)
+		c.Abort()
+		return
 	}
 	status, code := model.CreateVisitor(&data)
 	c.JSON(status, entity.NewResponseObject(code, common.Message[code]))
@@ -42,7 +45,7 @@ func CreateVisitor(c *gin.Context) {
 func GetVisitor(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		Log.Warnf(common.SYSTEM_ERROR_LOG, "输入参数错误", err)
+		utils.ParameterWarnLog(err)
 		c.JSON(http.StatusBadRequest, entity.NewResponseObject(common.PARAMETER_BAD_REQUEST, common.Message[common.PARAMETER_BAD_REQUEST]))
 		return
 	}
@@ -66,10 +69,14 @@ func GetVisitor(c *gin.Context) {
 // @Failure 404 object entity.ResponseObject "未找到资源"
 // @Router /v1/visitor/list [GET]
 func GetVisitors(c *gin.Context) {
-	pageNum, err := strconv.Atoi(c.DefaultQuery("pageNum", "-1"))
-	pageSize, err := strconv.Atoi(c.DefaultQuery("pageSize", "-1"))
-	if err != nil {
-		Log.Warnf(common.SYSTEM_ERROR_LOG, "输入参数错误", err)
+	pageNum, err1 := strconv.Atoi(c.DefaultQuery("pageNum", "-1"))
+	pageSize, err2 := strconv.Atoi(c.DefaultQuery("pageSize", "-1"))
+	if err1 != nil || err2 != nil {
+		if err1 != nil {
+			utils.ParameterWarnLog(err1)
+		} else {
+			utils.ParameterWarnLog(err2)
+		}
 		c.JSON(http.StatusBadRequest, entity.NewResponseObject(common.PARAMETER_BAD_REQUEST, common.Message[common.PARAMETER_BAD_REQUEST]))
 		return
 	}
@@ -81,16 +88,81 @@ func GetVisitors(c *gin.Context) {
 	}
 }
 
-//修改visitor信息
+// @Tags Visitor接口
+// @Summary 修改visitor信息
+// @Description 输入新的Visitor信息以更新信息
+// @Accept  json
+// @Produce json
+// @Param id path int true "禁用的visitor id参数"
+// @Param visitor body model.CreateVisitorVO true "访客信息"
+// @Success 200 object entity.ResponseObject "修改成功"
+// @Failure 403 object entity.ResponseObject "用户名重复"
+// @Failure 404 object entity.ResponseObject "未找到资源"
+// @Failure 500 object entity.ResponseObject "服务器错误"
+// @Router /v1/visitor/modify/{id} [PUT]
 func ModifyVisitor(c *gin.Context) {
-
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		utils.ParameterWarnLog(err)
+		c.JSON(http.StatusBadRequest, entity.NewResponseObject(common.PARAMETER_BAD_REQUEST, common.Message[common.PARAMETER_BAD_REQUEST]))
+		return
+	}
+	var data model.Visitor
+	if err := c.ShouldBind(&data); err != nil {
+		Log.Errorf(common.SYSTEM_ERROR_LOG, "Json bind error!", err)
+		c.Abort()
+		return
+	}
+	status, code := model.ModifyVisitor(id, data)
+	c.JSON(status, entity.NewResponseObject(code, common.Message[code]))
 }
 
-//禁用某个visitor
-func DisableVisitor(c *gin.Context) {
-
+// @Tags Visitor接口
+// @Summary 禁用(启用)某个visitor
+// @Description Flip某个visitor的状态，1->0;0->1
+// @Accept  json
+// @Produce json
+// @Param id path int true "禁用的visitor id参数"
+// @Success 200 object entity.ResponseObject "禁用成功"
+// @Failure 400 object entity.ResponseObject "输入参数有误"
+// @Failure 500 object entity.ResponseObject "服务器错误"
+// @Router /v1/visitor/disable/{id} [PATCH]
+func FlipVisitorStatus(c *gin.Context) {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		utils.ParameterWarnLog(err)
+		c.JSON(http.StatusBadRequest, entity.NewResponseObject(common.PARAMETER_BAD_REQUEST, common.Message[common.PARAMETER_BAD_REQUEST]))
+		return
+	}
+	status, code := model.FlipVisitorStatus(id)
+	if status < 300 {
+		c.JSON(status, entity.NewResponseObject(code, common.Message[code]))
+	} else {
+		c.JSON(status, entity.NewResponseObject(code, common.Message[code]))
+	}
 }
 
+// @Tags Visitor接口
+// @Summary 删除某个visitor
+// @Description 输入Visitor_id以删除visitor
+// @Accept  json
+// @Produce json
+// @Param id path int true "删除的visitor id参数"
+// @Success 200 object entity.ResponseObject "删除成功"
+// @Failure 400 object entity.ResponseObject "输入参数有误"
+// @Failure 500 object entity.ResponseObject "服务器错误"
+// @Router /v1/visitor/delete/{id}  [DELETE]
 func DeleteVisitor(c *gin.Context) {
-
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		utils.ParameterWarnLog(err)
+		c.JSON(http.StatusBadRequest, entity.NewResponseObject(common.PARAMETER_BAD_REQUEST, common.Message[common.PARAMETER_BAD_REQUEST]))
+		return
+	}
+	status, code := model.DeleteVisitor(id)
+	if status < 300 {
+		c.JSON(status, entity.NewResponseObject(code, common.Message[code]))
+	} else {
+		c.JSON(status, entity.NewResponseObject(code, common.Message[code]))
+	}
 }
